[package]
name = "dm-tools"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dm-tools-derive = { path = "../dm-tools-derive" }
num-traits = "0.2"
num-derive = "0.3"