[package]
name = "dm-tools"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dm-tools-derive = { path = "../dm-tools-derive" }
num-traits  = "0.2"
num-derive = "0.3"
itertools = "0.8"
chrono = "^0.4"
gtk = "^0.7"
relm = "^0.17"
glib = "^0.8"
relm-derive = "^0.17"
