[package]
name = "dnd-toolkit"
version = "0.1.0"
authors = ["Noah <noah@coronasoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dm-tools = { path = "../dm-tools" }
chrono = "^0.4"
gtk = "^0.7"
relm = "^0.17"
glib = "^0.8"
relm-derive = "^0.17"
